--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,33 @@
+*{
+    padding: 0;
+}
+
+body{
+    background-color: brown;
+}
+
+
+.flax{
+    background-color: azure;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    font-family: "MyFont";
+    font-size: 25px;
+}
+
+
 @font-face {
     font-family: "MyFont";
     src: local("昔々ふぉんと");
 }
 
-h1{
+header{
     font-family: "MyFont";
     font-size: 50px;
+    text-align: center;
+}
+
+li{
+    list-style: none;
 }
